--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -1,6 +1,7 @@
 <table style="border: 1px solid #cacaca;" width="80%" align="top" cellpadding="0" cellspacing="0">
   <tbody>
     <tr>
+      <th>Sys ID</th>
       <th>Job ID</th>
       <th>PDF Number</th>
       <th>Open Image</th>
@@ -12,8 +13,8 @@
       <tr>
         <td><%= job.u_job_id %></td>
         <td><%= job.u_pdf_number %></td>
-        <td><%= image_tag("data:image/jpeg;base64,#{job.u_openimage_base64code}") %></td>
-        <td><%= image_tag("data:image/jpeg;base64,#{job.u_close_image_base64code}") %></td>
+        <td><%= image_tag("data:image/jpeg;base64,#{job.u_openimage_base64code}", size: "100") %></td>
+        <td><%= image_tag("data:image/jpeg;base64,#{job.u_close_image_base64code}", size: "100") %></td>
         <td><%= job.created_at %></td>
         <td><%= job.updated_at %></td>
       </tr>
