--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -8,6 +8,7 @@
       <th>Close Image</th>
       <th>Created At</th>
       <th>Updated At</th>
+      <th></th>
     </tr>
     <% @pdfjobs.each do |job| %>
       <tr>
@@ -18,6 +19,7 @@
         <td><%= image_tag("data:image/jpeg;base64,#{job.u_close_image_base64code}", size: "100") %></td>
         <td><%= job.created_at %></td>
         <td><%= job.updated_at %></td>
+        <td><%= link_to "Delete", job, :remote => true, :confirm => 'Are you sure?', :method => :delete %></td>
       </tr>
     <% end %>
   </tbody>
