--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -19,7 +19,8 @@
         <td><%= image_tag("data:image/jpeg;base64,#{job.u_close_image_base64code}", size: "100") %></td>
         <td><%= job.created_at %></td>
         <td><%= job.updated_at %></td>
-        <td><%= link_to "Delete", job, :remote => true, :confirm => 'Are you sure?', :method => :delete %></td>
+        <td><%= link_to "Delete", job, :remote => true, :confirm => 'Are you sure?', 
+        :method => :delete %></td>
       </tr>
     <% end %>
   </tbody>
