--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -20,7 +20,7 @@
         <td><%= job.created_at %></td>
         <td><%= job.updated_at %></td>
         <td><%= link_to 'Delete', pdfjob_path(job), :method => "delete", 
-        :data => 'Are you sure?' %></td>
+        data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
