Implemented the PDF functionality that generate the PDF with data and images in each page

--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -1,4 +1,6 @@
-<%= @pdfjobs_count %>
+<%= @pdfjobs_count %><br/>
+
+<p style="color:red;"><%= flash[:success] %></p>
 
 <table style="border: 1px solid #cacaca;" width="80%" align="top" cellpadding="0" cellspacing="0">
   <tbody>
@@ -10,7 +12,7 @@
       <th>Close Image</th>
       <th>Created At</th>
       <th>Updated At</th>
-      <th></th>
+      <th>Action</th>
     </tr>
     <% @pdfjobs.each do |job| %>
       <tr>
@@ -22,7 +24,14 @@
         <td><%= job.created_at %></td>
         <td><%= job.updated_at %></td>
         <td><%= link_to 'Delete', pdfjob_path(job),  method: :delete, 
-        data: { confirm: 'Are you sure?' } %></td>
+        data: { confirm: 'Are you sure?' } %>|</td>
+        <% if job.has_full_report? %>
+          <td><%= link_to "Download Report", download_full_pdf_report_pdfjobs_path(
+          :id => job.id), target: '_self' %>|</td>
+        <% else %>
+          <td><%= link_to "Generate Report", generate_full_pdf_report_pdfjobs_path(
+          :id => job.id)%></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
