--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -1,6 +1,7 @@
 <%= @pdfjobs_count %><br/>
 
 <p style="color:red;"><%= flash[:success] %></p>
+<p style="margin: 0 0 0 943px;"><%= link_to "Delete All",  clear_index_list_view_pdfjobs_path %></p>
 
 <table style="border: 1px solid #cacaca;" width="80%" align="top" cellpadding="0" cellspacing="0">
   <tbody>
@@ -8,8 +9,8 @@
       <th>Sys ID</th>
       <th>Job ID</th>
       <th>PDF Number</th>
-      <th>Open Image</th>
-      <th>Close Image</th>
+      <!-- <th>Open Image</th>
+      <th>Close Image</th> -->
       <th>Created At</th>
       <th>Updated At</th>
       <th>Action</th>
@@ -19,15 +20,15 @@
         <td><%= job.sys_id %></td>
         <td><%= job.u_job_id %></td>
         <td><%= job.u_pdf_number %></td>
-        <td><%= image_tag("data:image/jpeg;base64,#{job.u_openimage_base64code}", size: "100") %></td>
-        <td><%= image_tag("data:image/jpeg;base64,#{job.u_close_image_base64code}", size: "100") %></td>
+        <!-- <td><%#= image_tag("data:image/jpeg;base64,#{job.u_openimage_base64code}", size: "100") %></td>
+        <td><%#= image_tag("data:image/jpeg;base64,#{job.u_close_image_base64code}", size: "100") %></td> -->
         <td><%= job.created_at %></td>
         <td><%= job.updated_at %></td>
         <td><%= link_to 'Delete', pdfjob_path(job),  method: :delete, 
         data: { confirm: 'Are you sure?' } %>|</td>
         <% if job.has_full_report? %>
           <td><%= link_to "Download Report", download_full_pdf_report_pdfjobs_path(
-          :id => job.id), target: '_self' %>|</td>
+          :id => job.id), target: '_self' %></td>
         <% else %>
           <td><%= link_to "Generate Report", generate_full_pdf_report_pdfjobs_path(
           :id => job.id)%></td>
