--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -19,20 +19,18 @@
       <tr>
         <td><%= job.sys_id %></td>
         <td><%= job.u_job_id %></td>
-        <td><%= job.u_pdf_number %></td>
+        <!--<td><%#= job.u_pdf_number %></td>-->
         <!-- <td><%#= image_tag("data:image/jpeg;base64,#{job.u_openimage_base64code}", size: "100") %></td>
         <td><%#= image_tag("data:image/jpeg;base64,#{job.u_close_image_base64code}", size: "100") %></td> -->
         <td><%= job.created_at %></td>
         <td><%= job.updated_at %></td>
         <td><%= link_to 'Delete', pdfjob_path(job),  method: :delete, 
-        data: { confirm: 'Are you sure?' } %>|</td>
-        <% if job.has_full_report? %>
-          <td><%= link_to "Download Report", download_full_pdf_report_pdfjobs_path(
-          :id => job.id), target: '_self' %></td>
-        <% else %>
-          <td><%= link_to "Generate Report", generate_full_pdf_report_pdfjobs_path(
-          :id => job.id)%></td>
-        <% end %>
+        data: { confirm: 'Are you sure?' } %></td>
+        <%# if job.has_full_report? %>
+          <!--<td><%#= link_to "Download Report", download_full_pdf_report_pdfjobs_path(:id => job.id), target: '_self' %></td>-->
+        <%# else %>
+          <!--<td><%#= link_to "Generate Report", generate_full_pdf_report_pdfjobs_path(:id => job.id)%></td>-->
+        <%# end %>
       </tr>
     <% end %>
   </tbody>
