Modifed the index view file

--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -8,7 +8,7 @@
     <tr>
       <th>Sys ID</th>
       <th>Job ID</th>
-      <th>PDF Number</th>
+      <th>Floor</th>
       <!-- <th>Open Image</th>
       <th>Close Image</th> -->
       <th>Created At</th>
@@ -19,6 +19,7 @@
       <tr>
         <td><%= job.sys_id %></td>
         <td><%= job.u_job_id %></td>
+        <td><%= job.u_floor %></td>
         <!--<td><%#= job.u_pdf_number %></td>-->
         <!-- <td><%#= image_tag("data:image/jpeg;base64,#{job.u_openimage_base64code}", size: "100") %></td>
         <td><%#= image_tag("data:image/jpeg;base64,#{job.u_close_image_base64code}", size: "100") %></td> -->
