Modified the Photo Page file

--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -9,6 +9,7 @@
       <th>Sys ID</th>
       <th>Job ID</th>
       <th>Floor</th>
+      <th>Location</th>
       <!-- <th>Open Image</th>
       <th>Close Image</th> -->
       <th>Created At</th>
