Modified the PDF Job index view page

--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -8,6 +8,7 @@
     <tr>
       <th>Job ID</th>
       <th>Service ID</th>
+      <th>Assets ID</th>
       <th>Location</th>
       <th>Bulding</th>
       <th>Floor</th>
@@ -20,6 +21,7 @@
       <tr>
         <td><%= job.u_job_id %></td>
         <td><%= job.u_service_id %></td>
+        <td><%= job.u_asset_id %></td>
         <td><%= job.u_location_desc %></td>
         <td><%= job.u_building %></td>
         <td><%= job.u_floor %></td>
