Modified the PDF Jobs index file

--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -15,8 +15,9 @@
       <th>Damper Name</th>
       <th>Result</th>
       <th>Job Start Date</th>
-      <th>Job End Data</th>
+      <th>Job End Date</th>
       <th>Inspected ON</th>
+      <th>Scale REP</th>
       <th>Action</th>
     </tr>
     <% @pdfjobs.each do |job| %>
@@ -32,6 +33,7 @@
         <td><%= job.u_job_start_date %></td>
         <td><%= job.u_job_end_date %></td>
         <td><%= job.u_inspected_on %></td>
+        <td><%= job.u_job_scale_rep %></td>
        
         <!--<td><%#= job.u_pdf_number %></td>-->
         <!--<td><%#= image_tag("data:image/jpeg;base64,#{job.image1}", size: "100") %></td>-->
