Modified the PDFJOb index file and Photo page file

--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -18,6 +18,7 @@
       <th>Job End Date</th>
       <th>Inspected ON</th>
       <th>Scale REP</th>
+      <th>NA Reason</th>
       <th>Action</th>
     </tr>
     <% @pdfjobs.each do |job| %>
@@ -34,7 +35,7 @@
         <td><%= job.u_job_end_date %></td>
         <td><%= job.u_inspected_on %></td>
         <td><%= job.u_job_scale_rep %></td>
-       
+        <td><%= job.u_non_accessible_reasons %></td>
         <!--<td><%#= job.u_pdf_number %></td>-->
         <!--<td><%#= image_tag("data:image/jpeg;base64,#{job.image1}", size: "100") %></td>-->
         <!--<td><%#= image_tag("data:image/jpeg;base64,#{job.u_close_image_base64code}", size: "100") %></td> -->
