--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -7,10 +7,11 @@
   <tbody>
     <tr>
       <th>Job ID</th>
+      <th>Service ID</th>
       <th>Image1</th>
-      <th>Image2 ID</th>
-      <th>Image3 ID</th>
-      <th>Image4 ID</th>
+      <th>Image2</th>
+      <th>Image3</th>
+      <th>Image4</th>
       <!--<th>Location</th>
       <th>Bulding</th>
       <th>Floor</th>
@@ -37,10 +38,10 @@
       <tr>
         <td><%= job.u_job_id %></td>
         <td><%= job.u_service_id %></td>
-        <td><%= image_tag("data:image/jpeg;base64,#{job.u_image1}", size: 100) %></td>
-        <td><%= image_tag("data:image/jpeg;base64,#{job.u_image2}", size: 100) %></td>
-        <td><%= image_tag("data:image/jpeg;base64,#{job.u_image3}", size: 100) %></td>
-        <td><%= image_tag("data:image/jpeg;base64,#{job.u_image4}", size: 100) %></td>
+        <td><%= image_tag("data:image/jpeg;base64,#{job.u_image1}", size: "100") %></td>
+        <td><%= image_tag("data:image/jpeg;base64,#{job.u_image2}", size: "100") %></td>
+        <td><%= image_tag("data:image/jpeg;base64,#{job.u_image3}", size: "100") %></td>
+        <td><%= image_tag("data:image/jpeg;base64,#{job.u_image4}", size: "100") %></td>
         <!--<td><%#= job.u_location_desc %></td>
         <td><%#= job.u_building %></td>
         <td><%#= job.u_floor %></td>
