--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -12,6 +12,7 @@
       <th>Image2</th>
       <th>Image3</th>
       <th>Image4</th>
+      <th>Tag</th>
       <!--<th>Location</th>
       <th>Bulding</th>
       <th>Floor</th>
@@ -42,6 +43,7 @@
         <td><%= image_tag("data:image/jpeg;base64,#{job.u_image2}", size: "100") %></td>
         <td><%= image_tag("data:image/jpeg;base64,#{job.u_image3}", size: "100") %></td>
         <td><%= image_tag("data:image/jpeg;base64,#{job.u_image4}", size: "100") %></td>
+        <td><%= job.u_tag %><td>
         <!--<td><%#= job.u_location_desc %></td>
         <td><%#= job.u_building %></td>
         <td><%#= job.u_floor %></td>
