Modified the Index file

--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -16,13 +16,13 @@
       <th>Image4</th> -->
       <th>Tag</th>
       <th>Service Type</th>
-      <!--<th>Location</th>
-      <th>Bulding</th>
+      <!-- <th>Location</th>
+      <th>Bulding</th> -->
       <th>Floor</th>
       <th>Damper Type</th>
       <th>Damper Name</th>
       <th>Result</th>
-      <th>Job Start Date</th>
+      <!-- <th>Job Start Date</th>
       <th>Job End Date</th>
       <th>Inspected ON</th>
       <th>Scale REP</th>
@@ -33,7 +33,7 @@
       <th>Issue Type</th>
       <th>Corrected URL System</th>
       <th>Suggested UL System</th>
-      <th>Repair Action Performed</th>-->
+      <th>Repair Action Performed</th> -->
       <th>Active</th>
       <th>Delete</th>
       <th>Action</th>
@@ -55,12 +55,12 @@
         <td><%= job.u_tag %><td>
         <td><%= job.u_report_type %></td>
         <!--<td><%#= job.u_location_desc %></td>
-        <td><%#= job.u_building %></td>
-        <td><%#= job.u_floor %></td>
-        <td><%#= job.u_type %></td>
-        <td><%#= job.u_damper_name %></td>
-        <td><%#= job.u_status %></td>
-        <td><%#= job.u_job_start_date %></td>
+        <td><%#= job.u_building %></td>-->
+        <td><%= job.u_floor %></td>
+        <td><%= job.u_type %></td>
+        <td><%= job.u_damper_name %></td>
+        <td><%= job.u_status %></td>
+        <!-- <td><%#= job.u_job_start_date %></td>
         <td><%#= job.u_job_end_date %></td>
         <td><%#= job.u_inspected_on %></td>
         <td><%#= job.u_job_scale_rep %></td>
@@ -71,7 +71,7 @@
         <td><%#= job.u_issue_type %></td>
         <td><%#= job.u_corrected_url_system %></td>
         <td><%#= job.u_suggested_ul_system %></td>
-        <td><%#= job.u_repair_action_performed %></td>-->
+        <td><%#= job.u_repair_action_performed %></td>--> 
         <td><%= job.u_active %></td>
         <td><%= job.u_delete %></td>
 
