--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Pdfgenerationdev</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
-
-<%= yield %>
-
-</body>
+  <head>
+    <title>Pdfgenerationdev</title>
+    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>    
+    <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>    
+    <%= csrf_meta_tags %>
+  </head>
+  <body>    
+    <%= render 'shared/navigation' %>
+  
+    <div id="main-container" class="container-fluid">
+      <div class="row">
+        <div class="col-xs-12">
+          <%= yield %>
+        </div>
+      </div>
+    </div> 
+  </body>
 </html>
