Modified the Pdf Job Index file

--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -27,7 +27,7 @@
         <!-- <th>Asset ID(u_asset_id)</th>
         <th>Building(u_building)</th> -->
         <th>Asset Name(u_tag)</th>
-        <th>Location(u_location_desc)</th>
+        <!-- <th>Location(u_location_desc)</th> -->
         <th>Floor(u_floor)</th>
         <th>Type(u_type)</th>
         <th>Damper Name(u_damper_name)</th>
@@ -45,8 +45,7 @@
         <tr>        
           <td><%= damper.u_job_id %></td>        
           <td><%= damper.u_service_id %></td>        
-          <td><%= damper.u_tag %></td>
-          <td><%= damper.u_location_desc %></td>
+          <td><%= damper.u_tag %></td>          
           <td><%= damper.u_floor %></td>
           <td><%= damper.u_type %></td>
           <td><%= damper.u_damper_name %></td>
