--- a/app/views/pdfjobs/firestop_survey.html.erb
+++ b/app/views/pdfjobs/firestop_survey.html.erb
@@ -12,4 +12,50 @@
   </div>
 </div>
 
-<h1>FIRESTOPSURVEY</h1>
+<h1>Listing of Firestop Survey(<%= @firestop_survey_count %>)</h1>
+
+<div class="table-responsview">
+  <table class="table table-bordered border-striped" cellspacing="0" width="100%" id ="example">
+    <thead>
+      <tr>
+        <!-- <th>Group Name(u_facility_name)</th>
+        <th>Facility Name(u_group_name)</th> -->
+        <th>Job ID(u_job_id)</th>
+        <!-- <th>Job Start Date(u_job_start_date)</th>
+        <th>Job End Date(u_job_end_date)</th> -->
+        <th>Service ID(u_service_id)</th>
+        <!-- <th>Asset ID(u_asset_id)</th>
+        <th>Building(u_building)</th> -->
+        <th>Asset Name(u_tag)</th>
+        <!-- <th>Location(u_location_desc)</th> -->
+        <th>Floor(u_floor)</th>        
+        <th>Barrier Type(u_barrier_type)</th>
+        <th>Penetration(u_penetration_type)</th>
+        <th>Status(u_service_type)</th>
+        <th>Issue Type(u_issue_type)</th>
+        <!-- <th>Corrected URL System(u_corrected_url_system)</th>
+        <th>Suggested UL System(u_suggested_ul_system)</th> -->
+        <th>Active(u_active)</th>
+        <th>Delete(u_delete)</th>
+        <th colspan="3"></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @firestop_survey.each do |fss| %>
+        <tr>
+          <td><%= fss.u_job_id %></td>
+          <td><%= fss.u_service_id %></td>
+          <td><%= fss.u_tag %></td>
+          <td><%= fss.u_floor %></td>
+          <td><%= fss.u_barrier_type %></td>
+          <td><%= fss.u_penetration_type %></td>
+          <td><%= fss.u_service_type %></td>
+          <td><%= fss.u_issue_type %></td>
+          <td><%= fss.u_active %></td>
+          <td><%= fss.u_delete %></td>
+          <td><%= link_to 'Destroy', pdfjob_path(fss), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
