--- a/app/views/shared/_navigation.html.erb
+++ b/app/views/shared/_navigation.html.erb
@@ -19,17 +19,16 @@
     <div class="row">
       <div class="col-md-12">
 
-        <div class="col-md-4">
+        <div class="col-md-6">
           <a href="/"><h2>LSS PDF Report</h2></a>   
         </div> 
          
-        <div class="col-md-4">
+        <div class="col-md-6">
           <h2><%= $pdfjobs_count %></h2>
         </div>
-
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <a href="/pdfjobs/clear_index_list_view"><h2>Delete All Reports</h2></a>
-        </div>
+        </div> -->
       </div>
     </div>
   </div>
