Implemented basic UI For Firedoor Deficiency

--- a/app/views/pdfjobs/firedoor_inspection.html.erb
+++ b/app/views/pdfjobs/firedoor_inspection.html.erb
@@ -7,12 +7,13 @@
         <li class="active"><%= link_to 'FireDoor Inspection',  firedoor_inspection_pdfjobs_path %></li>
         <li><%= link_to 'Firestop Survey',  firestop_survey_pdfjobs_path %></li>
         <li><%= link_to 'Firestop Installation',  firestop_installation_pdfjobs_path %></li>
+        <li><%= link_to 'FireDoor Deficiency', firedoor_deficiency_pdfjobs_path %></li>
       </ul>
     </div>
   </div>
 </div>
 
-<h1>Listing of Damper FireDoor Inspection(<%= @firedoor_inspection_count %>)</h1>
+<h1>Listing of FireDoor Inspection(<%= @firedoor_inspection_count %>)</h1>
 
 <div class="table-responsview">
   <table class="table table-bordered border-striped" cellspacing="0" width="100%" id ="example">
