--- a/app/views/pdfjobs/damper_repair.html.erb
+++ b/app/views/pdfjobs/damper_repair.html.erb
@@ -10,51 +10,61 @@
       </ul>
     </div>
   </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="col-xs-6">
+        <h1>Listing of Damper Repair(<%= @damper_repair_count %>)</h1>
+      </div>
+      <div class="col-xs-6">
+        <%= will_paginate  @damper_repair %>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="table-responsview">
+        <table class="table table-bordered border-striped" cellspacing="0" width="100%" id ="example">
+          <thead>
+            <tr>
+              <!-- <th>Group Name(u_facility_name)</th>
+              <th>Facility Name(u_group_name)</th> -->
+              <th>Job ID(u_job_id)</th>
+              <!-- <th>Job Start Date(u_job_start_date)</th>
+              <th>Job End Date(u_job_end_date)</th> -->
+              <th>Service ID(u_service_id)</th>
+              <!-- <th>Asset ID(u_asset_id)</th>
+              <th>Building(u_building)</th> -->
+              <th>Asset Name(u_tag)</th>
+              <!-- <th>Location(u_location_desc)</th> -->
+              <th>Floor(u_floor)</th>
+              <th>Type(u_type)</th>
+              <th>Damper Name(u_damper_name)</th>
+              <th>Access Door(u_access_size)</th>
+              <th>Repair Action Performed(u_repair_action_performed)</th>
+              <th>Active(u_active)</th>
+              <th>Delete(u_delete)</th>
+              <th colspan="3"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @damper_repair.each do |dr| %>
+              <tr>
+                <td><%= dr.u_job_id %></td>
+                <td><%= dr.u_service_id %></td>
+                <td><%= dr.u_tag %></td>
+                <td><%= dr.u_floor %></td>
+                <td><%= dr.u_type %></td>
+                <td><%= dr.u_damper_name %></td>
+                <td><%= dr.u_access_size %></td>
+                <td><%= dr.u_repair_action_performed %></td>
+                <td><%= dr.u_active %></td>
+                <td><%= dr.u_delete %></td>
+                <td><%= link_to 'Destroy', pdfjob_path(dr), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
 </div>
-
-<h1>Listing of Damper Repair(<%= @damper_repair_count %>)</h1>
-
-<div class="table-responsview">
-  <table class="table table-bordered border-striped" cellspacing="0" width="100%" id ="example">
-    <thead>
-      <tr>
-        <!-- <th>Group Name(u_facility_name)</th>
-        <th>Facility Name(u_group_name)</th> -->
-        <th>Job ID(u_job_id)</th>
-        <!-- <th>Job Start Date(u_job_start_date)</th>
-        <th>Job End Date(u_job_end_date)</th> -->
-        <th>Service ID(u_service_id)</th>
-        <!-- <th>Asset ID(u_asset_id)</th>
-        <th>Building(u_building)</th> -->
-        <th>Asset Name(u_tag)</th>
-        <!-- <th>Location(u_location_desc)</th> -->
-        <th>Floor(u_floor)</th>
-        <th>Type(u_type)</th>
-        <th>Damper Name(u_damper_name)</th>
-        <th>Access Door(u_access_size)</th>
-        <th>Repair Action Performed(u_repair_action_performed)</th>
-        <th>Active(u_active)</th>
-        <th>Delete(u_delete)</th>
-        <th colspan="3"></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @damper_repair.each do |dr| %>
-        <tr>
-          <td><%= dr.u_job_id %></td>
-          <td><%= dr.u_service_id %></td>
-          <td><%= dr.u_tag %></td>
-          <td><%= dr.u_floor %></td>
-          <td><%= dr.u_type %></td>
-          <td><%= dr.u_damper_name %></td>
-          <td><%= dr.u_access_size %></td>
-          <td><%= dr.u_repair_action_performed %></td>
-          <td><%= dr.u_active %></td>
-          <td><%= dr.u_delete %></td>
-          <td><%= link_to 'Destroy', pdfjob_path(dr), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-</div>
-
