--- a/app/views/pdfjobs/firedoor_inspection.html.erb
+++ b/app/views/pdfjobs/firedoor_inspection.html.erb
@@ -35,16 +35,17 @@
               <th>Service ID(u_service_id)</th>
               <!-- <th>Asset ID(u_asset_id)</th>
               <th>Building(u_building)</th> -->
-              <th>Asset Name(u_tag)</th>
-              <!-- <th>Location(u_location_desc)</th> -->
               <th>Floor(u_floor)</th>
+              <th>Asset Name(u_tag)</th>
               <th>FireDoor Category(u_door_category)</th>
               <th>FireDoor Rating(u_fire_rating)</th>
               <th>FireDoor Inspection Result(u_door_inspection_result)</th>
               <th>FireDoor Type(u_door_type)</th>
+              <th>FireDoor Deficiency</th>
               <th>Active(u_active)</th>
               <th>Delete(u_delete)</th>
               <th colspan="3"></th>
+              <!-- <th>Location(u_location_desc)</th> -->
             </tr>
           </thead>
           <tbody>
@@ -52,12 +53,13 @@
               <tr>
                 <td><%= fdi.u_job_id %></td>
                 <td><%= fdi.u_service_id %></td>
-                <td><%= fdi.u_tag %></td>
                 <td><%= fdi.u_floor %></td>
+                <td><%= fdi.u_tag %></td>
                 <td><%= fdi.u_door_category %></td>
                 <td><%= fdi.u_fire_rating %></td>
                 <td><%= fdi.u_door_inspection_result %></td>
-                <td><%= fdi.u_door_type %></td>
+                <td><%= fdi.u_door_type %></td>                
+                <td><%= firedoor_deficiency_codes(fdi) %></td>
                 <td><%= fdi.u_active %></td>
                 <td><%= fdi.u_delete %></td>
                 <td><%= link_to 'Destroy', pdfjob_path(fdi), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
