--- a/app/views/pdfjobs/firestop_survey.html.erb
+++ b/app/views/pdfjobs/firestop_survey.html.erb
@@ -38,13 +38,14 @@
               <th>Asset Name(u_tag)</th>
               <th>Status(u_service_type)</th>
               <th>Penetration(u_penetration_type)</th>
-              <th>Barrier Type(u_barrier_type)</th>              
+              <th>Barrier Type(u_barrier_type)</th>
               <th>Issue Type(u_issue_type)</th>
+              <th>Survey Date(u_inspected_on)</th>
+              <th>Active(u_active)</th>
+              <th>Delete(u_delete)</th>
               <!-- <th>Location(u_location_desc)</th> -->
               <!-- <th>Corrected URL System(u_corrected_url_system)</th>
               <th>Suggested UL System(u_suggested_ul_system)</th> -->
-              <th>Active(u_active)</th>
-              <th>Delete(u_delete)</th>
               <th colspan="3"></th>
             </tr>
           </thead>
@@ -59,6 +60,7 @@
                 <td><%= fss.u_penetration_type %></td>
                 <td><%= fss.u_barrier_type %></td>                
                 <td><%= fss.u_issue_type %></td>
+                <td><%= fss.u_inspected_on %></td>
                 <td><%= fss.u_active %></td>
                 <td><%= fss.u_delete %></td>
                 <td><%= link_to 'Destroy', pdfjob_path(fss), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
