--- a/app/views/pdfjobs/index.html.erb
+++ b/app/views/pdfjobs/index.html.erb
@@ -39,7 +39,8 @@
               <th>Damper Name(u_damper_name)</th>
               <th>Asset Name(u_tag)</th>
               <th>Status(u_status)</th>
-              <th>Damper InspectionDate(u_inspected_on)</th>
+              <th>Damper InspectionDate(u_inspected_on(UTC))</th>
+              <th>Damper InspectionDate(u_inspected_on(SystemTime))</th>
               <th>Active(u_active)</th>
               <th>Delete(u_delete)</th>
               <th colspan="3"></th>
@@ -60,6 +61,7 @@
                 <td><%= di.u_tag %></td>
                 <td><%= di.u_status %></td>
                 <td><%= di.u_inspected_on %></td>
+                <td><%= di.u_inspected_on.localtime %></td>
                 <td><%= di.u_active %></td>
                 <td><%= di.u_delete %></td>
                 <td><%= link_to 'Destroy', pdfjob_path(di), method: :delete, data: { confirm: 'Are you sure?' }, class: 'btn btn-danger btn-xs' %></td>
